--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
-<html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Witness ESports</title>
+  <link rel="stylesheet" href="style.css>"
+</head>
 <body>
+  
+  <nav>
+    <ul class="menu">
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+
+    </ul>
+
+
+  </nav>
   <h1>Me</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
 
+
+</body>
 </html>
+
+
+
