--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
   <nav>
     <ul class="menu">
-      <li><a></a></li>
-      <li><a></a></li>
-      <li><a></a></li>
+      <li><a>accueil</a></li>
+      <li><a></a>nous</li>
+      <li><a></a>contact</li>
 
     </ul>
 
