--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   
   <nav>
     <ul class="menu">
-      <li><a>accueil</a></li>
-      <li><a></a>nous</li>
-      <li><a></a>contact</li>
-
+      <li><a href="">Accueil</a></li>
+      <li><a href=""></a>Notre histoire</li>
+      <li><a href="">Nos équipes</li>
+      <li><a href=""></a>Contact</li>
     </ul>
 
 
