--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
   <nav>
     <ul>
-      <li><a href="">Accueil</a></li>
+      <li><a href=""></a>Accueil</a></li>
       <li><a href=""></a>Notre histoire</li>
-      <li><a href="">Nos équipes</li>
+      <li><a href=""></a>Nos équipes</li>
       <li><a href=""></a>Contact</li>
     </ul>
 
