--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="nav">
   <nav>
     <ul>
       <li><a href=""></a>Accueil</a></li>
@@ -17,7 +17,7 @@
       <li><a href=""></a>Nos équipes</li>
       <li><a href=""></a>Contact</li>
     </ul>
-
+  </div>
 
   </nav>
   <h1>Me</h1>
